--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -7,10 +7,12 @@ edition = "2021"
 
 [dependencies]
 rocket = { version = "0.5.1", features = ["json"]}
-diesel = { version = "2.2.0", features = ["mysql"] }
+serde = { version = "1.0.147", features = ["derive"] }
+serde_derive = "1.0.147"
+serde_json = "1.0.87"
+diesel = { version = "2.0.2", features = ["mysql", "chrono", "serde_json"] }
 dotenvy = "0.15"
-chrono = "0.4.38"
-serde = { version = "1.0.209", features = ["derive"] }
+chrono = { version = "0.4.33", features = ["serde"] }
 bcrypt = "0.15.1"
 jsonwebtoken = "9.3.0"
 rocket_cors = "0.6.0"
