--- a/frontend/.vscode/launch.json
+++ b/frontend/.vscode/launch.json
@@ -7,7 +7,8 @@
         {
             "name": "frontend",
             "request": "launch",
-            "type": "dart"
+            "type": "dart",
+            "deviceId": "chrome"
         },
         {
             "name": "frontend (profile mode)",
