--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   intl: ^0.19.0
   shared_preferences: ^2.2.3
   flutter_spinkit: ^5.2.1
+  flutter_datetime_picker_plus: ^2.2.0
+  flutter_dotenv: ^5.1.0
 
 dev_dependencies:
   flutter_test:
