--- a/api/Cargo.toml
+++ b/api/Cargo.toml
@@ -16,3 +16,4 @@ chrono = { version = "0.4.33", features = ["serde"] }
 bcrypt = "0.15.1"
 jsonwebtoken = "9.3.0"
 rocket_cors = "0.6.0"
+regex = "1.10.6"
