Final version before submitting
Fixed a few bugs, and added the ability for referees to "ref" matches.

--- a/frontend/pubspec.yaml
+++ b/frontend/pubspec.yaml
@@ -72,6 +72,7 @@ flutter:
   assets:
     - assets/tfp_logo.png
     - assets/tfp_logo_background.png
+    - assets/.env
 
   fonts:
     - family: KuenstlerScript
